--- a/Home/styles.css
+++ b/Home/styles.css
@@ -18,11 +18,153 @@
 	font-weight: bold;
 	font-style: normal;
 }
-
+:root {
+	--blue-600: #2563eb;
+	--slate-400: #94a3b8;
+	--slate-500: #64748b;
+	--blur: 0px 0px 25px rgba(0, 0, 0, 0.1);
+}
 body {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Comfortaa", sans-serif;
-	font-weight: bold;
+	font-weight: normal;
+}
+.container {
+	max-width: 1200px;
+	margin: auto;
+	gap: 100px;
+	display: flex;
+	flex-direction: column;
+}
+.hero {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	padding: 50px 0;
+	align-items: center;
+}
+
+.hero-image {
+	width: 100%;
+	height: 400px;
+	background: grey;
+}
+.hero-content {
+	font-size: 45px;
+	padding: 0 50px;
+}
+.hero-content span {
+	color: var(--blue-600);
+}
+.selling-point {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	max-width: 1200px;
+	gap: 50px;
+}
+.selling-point-title p {
+	font-size: 14px;
+	color: black;
+}
+.selling-point-title h1 {
+	font-size: 24px;
+	color: var(--blue-600);
+}
+.selling-point-card-container {
+	display: flex;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 50px;
+}
+.selling-point-card {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding: 40px 50px;
+	border: 1px solid var(--blue-600);
+	border-radius: 25px;
+	gap: 50px;
+}
+.selling-point-card img {
+	width: 100px;
+	height: 100px;
+}
+.sp-header {
+}
+
+.sp-header h1 {
+	font-size: 20px;
+	color: var(--slate-500);
+}
+
+.sp-header p {
+	font-size: 14px;
+	color: var(--slate-400);
+}
+
+.selling-point-card button {
+	padding: 10px 25px;
+	border-radius: 15px;
+	border: 1px solid var(--blue-600);
+	background: none;
+	color: var(--slate-500);
+}
+.property {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	max-width: 1200px;
+	gap: 50px;
+}
+.property-title p {
+	font-size: 14px;
+	color: black;
+}
+
+.property-title h1 {
+	font-size: 24px;
+	color: var(--blue-600);
+}
+
+.property-card-container {
+	display: flex;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 50px;
+}
+
+.property-card {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 25px;
+	gap: 50px;
+	box-shadow: var(--blur);
+}
+
+.property-image {
+	position: relative;
+}
+
+.property-image img {
+	width: 400px;
+	height: 200px;
+	background: black;
+}
+
+.property-image model {
+	padding: 7px 15px;
+	font-size: 20px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	z-index: 2;
 }
