--- a/Home/styles.css
+++ b/Home/styles.css
@@ -19,6 +19,7 @@
 	font-style: normal;
 }
 :root {
+	--blue-400: #60a5fa;
 	--blue-600: #2563eb;
 	--slate-400: #94a3b8;
 	--slate-500: #64748b;
@@ -75,12 +76,13 @@ body {
 	color: var(--blue-600);
 }
 .selling-point-card-container {
-	display: flex;
+	width: 100%;
+	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 50px;
 }
 .selling-point-card {
-	width: 100%;
+	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -93,8 +95,6 @@ body {
 .selling-point-card img {
 	width: 100px;
 	height: 100px;
-}
-.sp-header {
 }
 
 .sp-header h1 {
@@ -134,37 +134,64 @@ body {
 }
 
 .property-card-container {
-	display: flex;
+	width: 100%;
+	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 50px;
 }
 
 .property-card {
-	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	border-radius: 25px;
-	gap: 50px;
 	box-shadow: var(--blur);
+	overflow: hidden;
 }
 
 .property-image {
+	width: 100%;
+	height: 200px;
 	position: relative;
 }
 
 .property-image img {
-	width: 400px;
-	height: 200px;
-	background: black;
+	width: 100%;
+	height: 100%;
+	background: gray;
 }
 
-.property-image model {
-	padding: 7px 15px;
-	font-size: 20px;
+.property-image .model {
+	padding: 10px 15px;
+	font-size: 16px;
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 15px;
+	right: 15px;
 	z-index: 2;
+	color: white;
+	background: var(--blue-400);
+	border-radius: 10px;
+}
+
+.property-content {
+	width: 100%;
+}
+
+.p-detail {
+	padding: 0 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.p-location {
+	padding: 0 20px;
+	display: flex;
+	gap: 10px;
+	align-items: center;
+}
+
+.p-location img {
+	width: 30px;
+	height: 30px;
 }
