--- a/Home/styles.css
+++ b/Home/styles.css
@@ -176,22 +176,84 @@ body {
 
 .property-content {
 	width: 100%;
+	font-weight: bold;
 }
 
 .p-detail {
-	padding: 0 20px;
 	display: flex;
 	justify-content: space-between;
 }
 
+.p-price {
+	color: var(--blue-600);
+}
+
 .p-location {
-	padding: 0 20px;
 	display: flex;
 	gap: 10px;
 	align-items: center;
+	color: var(--slate-400);
 }
 
 .p-location img {
-	width: 30px;
-	height: 30px;
+	width: 24px;
+	height: auto;
+}
+
+.p-location p {
+}
+
+.p-rooms {
+	display: flex;
+	justify-content: space-between;
+	color: var(--slate-400);
+}
+
+.p-rooms img {
+	width: 24px;
+}
+
+.p-bathroom,
+.p-bedroom,
+.p-sf {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.divider {
+	width: 100%;
+	height: 1px;
+	background: var(--slate-400);
+	margin: 20px 0;
+}
+
+.p-owner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.owner-detail {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.owner-detail img {
+	height: 40px;
+	width: 40px;
+	background: gray;
+	border-radius: 50%;
+	overflow: hidden;
+}
+
+.feedback-icon {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.feedback-icon img {
+	width: 24px;
 }
