--- a/Home/styles.css
+++ b/Home/styles.css
@@ -82,7 +82,6 @@ body {
 	gap: 50px;
 }
 .selling-point-card {
-	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -92,9 +91,19 @@ body {
 	border-radius: 25px;
 	gap: 50px;
 }
-.selling-point-card img {
+
+.sp-img-container {
 	width: 100px;
 	height: 100px;
+	border-radius: 25px;
+	border: 1px solid var(--blue-600);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.selling-point-card img {
+	height: 30px;
+	width: auto;
 }
 
 .sp-header h1 {
@@ -107,12 +116,13 @@ body {
 	color: var(--slate-400);
 }
 
-.selling-point-card button {
+.selling-point-card a {
 	padding: 10px 25px;
 	border-radius: 15px;
 	border: 1px solid var(--blue-600);
 	background: none;
 	color: var(--slate-500);
+	cursor: pointer;
 }
 .property {
 	display: flex;
