--- a/Services/styles.css
+++ b/Services/styles.css
@@ -4,16 +4,17 @@
 	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 50px;
+	gap: 10px;
 }
 .side-bar {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	justify-content: flex-start;
-	align-items: center;
+	align-items: flex-start;
 	flex-direction: column;
-	background: grey;
+	padding: 20px;
+	gap: 20px;
 }
 .services {
 	display: flex;
@@ -23,7 +24,53 @@
 }
 
 .card-item-container {
-	border: 2px dashed black;
-	border-radius: 10px;
 	height: 100%;
+	display: grid;
+	grid-column: span 2 / span 2;
+	grid-template-columns: repeat(2, 1fr);
+	padding-bottom: 50px;
+	gap: 20px;
+}
+
+.recent {
+	padding: 20px 0;
+}
+
+.recent h1 {
+	font-size: 24px;
+}
+
+.recent p {
+	font-size: 12px;
+}
+
+.map {
+	background: wheat;
+	height: 100%;
+	width: 100%;
+}
+
+.location,
+.place,
+.price-range {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.location select {
+	width: 200px;
+	border: 1px solid var(--blue-600);
+}
+
+.price-range input[type="number"] {
+	background: none;
+	border: none;
+	width: 100px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
