--- a/components/property-card/property-card.css
+++ b/components/property-card/property-card.css
@@ -3,7 +3,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	border-radius: 25px;
+
 	box-shadow: var(--blur);
 	overflow: hidden;
 }
@@ -35,6 +35,7 @@
 .property-content {
 	width: 100%;
 	font-weight: bold;
+	background: white;
 }
 
 .p-detail {
@@ -111,4 +112,12 @@
 
 .feedback-icon img {
 	width: 24px;
+}
+
+.SIZE {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
 }
